# ipcalc

./: AFOSBUILD.sh  Makefile  NEWS  README.md  ipcalc-maxmind.c  ipcalc.1.md  ipcalc.c  meson.build  meson_options.txt  netsplit.c
tests/: 12.15.1.5  129.15.31.5  192.168.1.5-16  192.168.1.5-24  192.168.1.5-30  192.168.1.5-31  192.168.1.5-8  192.168.2.6  192.168.2.7  193.92.150.3-24  193.92.31.0  all-info-192.168.2.7  deaggregate-192.168.2.0-192.168.3.255  deaggregate-192.168.2.33-192.168.3.2  deaggregate-192.168.2.7-192.168.2.13  deaggregate-2a03:2880:20:4f06:face::0-2a03:2880:20:4f06:face::fffe  deaggregate-fcd3:57d1:733:c18f:b498:25e1:788:0-fcd3:57d1:733:c18f:b498:25e1:788:ffff  deaggregate-fcd3:57d1:733:c18f:b498:25e1:788:f-fcd3:57d1:733:c18f:b498:25e1:789:ffa9  fd0b:a336:4e7d::-48  fd95:6be5:0ae0:84a5::-64  hostname-localhost-ipv4  hostname-localhost-ipv4-json  hostname-localhost-ipv6  i-0.0.0.1  i-10.0.0.1  i-100.64.0.1  i-127.0.0.1  i-127.0.1.1  i-169.254.0.1  i-172.16.0.1  i-172.31.255.254  i-192.0.0.1  i-192.0.0.10  i-192.0.0.170  i-192.0.0.171  i-192.0.0.254  i-192.0.0.6  i-192.0.0.8  i-192.0.0.9  i-192.0.2.1  (+44 more)
